test/errors/parsing/asWithUseExcept.1.good
asWithUseExcept.chpl:6: error: cannot rename in 'except' list
